<resources>
    <string name="VUFORIA_INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="VUFORIA_INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_MISMATCH_KEY">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="VUFORIA_INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="about_activity">About</string>
    <string name="about_app_version">App Version</string>
    <string name="about_build_time">App Build Time</string>
    <string name="about_library_version">Library Version</string>
    <string name="about_network_connection_info">Network Connection Config Information</string>
    <string name="about_network_protocol_version">Robot Wifi Protocol Version</string>
    <string name="about_wifi_connected">Connected</string>
    <string name="about_wifi_direct_info">Wifi Direct Config Information</string>
    <string name="about_wifi_group_owner">Group Owner</string>
    <string name="about_wifi_ip">IP Address</string>
    <string name="about_wifi_is_group_owner">Group Owner: this phone</string>
    <string name="about_wifi_name">Name</string>
    <string name="about_wifi_no_info">No connection information</string>
    <string name="about_wifi_passphrase">Passphrase</string>
    <string name="action_configuration">Configure Robot</string>
    <string name="action_exit_app">Exit</string>
    <string name="action_programing_and_manage">Program &amp; Manage</string>
    <string name="action_programming_mode">Programming Mode</string>
    <string name="action_restart_robot">Restart Robot</string>
    <string name="action_settings">Settings</string>
    <string name="action_wifi_channel_selector">Wifi Direct Channel Selection</string>
    <string name="actionlistenerfailure_busy">Error: BUSY</string>
    <string name="actionlistenerfailure_error">Error</string>
    <string name="actionlistenerfailure_nop2p">WifiDirect not supported</string>
    <string name="actionlistenerfailure_nosevicerequests">Error: no service requests</string>
    <string name="actionlistenerfailure_nowifi">Wifi is disabled</string>
    <string name="actionlistenerfailure_unknown">Error: UNKNOWN</string>
    <string name="activeConfigCaption">Active Configuration:</string>
    <string name="active_connections_label">Active connections:</string>
    <string name="adafruit_imu_description">an Adafruit IMU</string>
    <string name="adafruit_imu_name">Adafruit IMU</string>
    <string name="adafruit_imu_xmltag">AdafruitBNO055IMU</string>
    <string name="add_motor_controller_menu_item">Add Motor Controller</string>
    <string name="add_servo_controller_menu_item">Add Servo Controller</string>
    <string name="alertLynxFirmwareUpdateFailed">Firmware update of Expansion Hub %s failed. Please try again.</string>
    <string name="alertLynxFirmwareUpdateFailedTitle">Firmware Update Failed</string>
    <string name="alertMessageNoActionGetContent">Your device lacks system support for selecting files.</string>
    <string name="alertTitleRobotControllerConsole">Robot Controller Console</string>
    <string name="appNameDriverStation">Driver Station</string>
    <string name="appNameRobotController">Robot Controller</string>
    <string name="appNameUnknown">Unknown Application</string>
    <string name="appThemeChangeRestartNotifyDS">App color scheme has changed. The driver station will restart.</string>
    <string name="appThemeChangeRestartNotifyRC">App color scheme has changed. The robot controller will restart.</string>
    <string name="app_name">FTC Driver Station</string>
    <string name="attached">Attached</string>
    <string name="availableConfigListCaption">Available configurations:</string>
    <string name="availableConfigsInfoMessage">"These are the configurations the Hardware Wizard was able to find. You can edit each configuration by clicking the edit button. The 'Activate' button will set that configuration as the current one, which will be used to start the robot."</string>
    <string name="availableModuleListCaption">Available Expansion Hubs:</string>
    <string name="availableTemplateListCaption">Available templates:</string>
    <string name="blocks_activity">Blocks</string>
    <string name="buttonExitWithoutSaving">Exit Without Saving</string>
    <string name="buttonNameAdd">Add</string>
    <string name="buttonNameCancel">Cancel</string>
    <string name="buttonNameConfigure">Config</string>
    <string name="buttonNameConfigureModuleAddress">Configure Address</string>
    <string name="buttonNameDone">Done</string>
    <string name="buttonNameFix">Fix</string>
    <string name="buttonNameInfo">Info</string>
    <string name="buttonNameNew">New</string>
    <string name="buttonNameOK">OK</string>
    <string name="buttonNameSave">Save</string>
    <string name="buttonNameScan">Scan</string>
    <string name="buttonNameSwap">Swap</string>
    <string name="buttonTextSelectOpMode">"Select Op Mode
← Autonomous | TeleOp →"</string>
    <string name="captionAvailableSwapDevices">Available USB controllers to swap with:</string>
    <string name="captionAvailableUsbDevices">USB Devices in configuration:</string>
    <string name="choice_prompt">Which sensor is attached?</string>
    <string name="choice_prompt_analogInput">Which sensor is attached?</string>
    <string name="choice_prompt_analogOutput">Which sensor is attached?</string>
    <string name="choice_prompt_digital_device">Which sensor is attached?</string>
    <string name="choice_prompt_i2c">Which sensor is attached?</string>
    <string name="choice_prompt_module_address">Choose new module address</string>
    <string name="choice_prompt_motor">Which kind of motor is attached?</string>
    <string name="choice_prompt_servo">Which kind of servo is attached?</string>
    <string name="clear_remembered_groups">Clear Remembered Groups</string>
    <string name="configDirtyLabel">(unsaved) %s</string>
    <string name="configFailedToOpenDeviceManager">Failed to open the Device Manager</string>
    <string name="configFromTemplateInfoMessage">Several robot configuration templates are available. Configuring your robot using one of these templates is the fastest way to get a new robot up and running.</string>
    <string name="configFromTemplateInfoTitle">Configure from Template</string>
    <string name="configGivingUpOnCommand">Giving up on command %1$s(%2$d) after %3$d attempts</string>
    <string name="configure_robot_menu_item">Configure Robot</string>
    <string name="gamepad_default">@string/gamepad_logitech_f310</string>
    <string name="inspection_mode_menu_item">Self Inspect</string>
    <string name="network_connection_devices">Wifi Devices:</string>
    <string name="packageName">@string/packageNameDriverStation</string>
    <string name="pair_instructions">"Make sure that the FTC Robot Controller app is open on your other device, and that both devices have wifi enabled. 

Choose from the following list of Robot Controller phones. Non-matching/incorrectly named phones will not appear. Robot Controller names need to begin with the team number matching your Driver Station."</string>
    <string name="pair_wifi_name">"This device's name is:"</string>
    <string name="pref_app_theme">pref_app_theme</string>
    <string name="pref_app_theme_rc">pref_app_theme_rc</string>
    <string name="pref_debug_driver_station_logs">pref_debug_driver_station_logs</string>
    <string name="pref_device_name">pref_device_name</string>
    <string name="pref_device_name_rc">pref_device_name_rc</string>
    <string name="pref_gamepad_user1_type_key">pref_gamepad_user1_type</string>
    <string name="pref_gamepad_user2_type_key">pref_gamepad_user2_type</string>
    <string name="pref_launch_advanced_rc_settings">pref_launch_advanced_rc_settings</string>
    <string name="pref_launch_inspect_ds">pref_launch_inspect_ds</string>
    <string name="pref_launch_inspect_rc">pref_launch_inspect_rc</string>
    <string name="pref_pair_rc">pref_pair_rc</string>
    <string name="pref_sound_on_off_rc">pref_sound_on_off_rc</string>
    <string name="prefcat_configure_ds">Driver Station Settings</string>
    <string name="prefcat_configure_robot">Robot Controller Settings</string>
    <string name="prefcat_gamepad">Gamepads</string>
    <string name="prefcat_logging">Logging</string>
    <string name="prefedit_app_theme_ds">Driver Station Color Scheme</string>
    <string name="prefedit_app_theme_rc">Robot Controller Color Scheme</string>
    <string name="prefedit_app_theme_summary_ds">Change the color scheme of the driver station. Note: the app will restart if the color scheme is changed</string>
    <string name="prefedit_app_theme_summary_rc">Change the color scheme of the robot controller. Note: the app will restart if the color scheme is changed</string>
    <string name="prefedit_debug_driver_station_logs">Log Internal Events</string>
    <string name="prefedit_debug_driver_station_logs_summary">Record low-level internal events to the log. This may generate a large log volume.</string>
    <string name="prefedit_device_name_ds">Driver Station Name</string>
    <string name="prefedit_device_name_rc">Robot Controller Name</string>
    <string name="prefedit_device_name_summary_ds">Change the name of the driver station</string>
    <string name="prefedit_device_name_summary_rc">Change the name of the robot controller</string>
    <string name="prefedit_gamepad_user1_type">Gamepad #1 Type</string>
    <string name="prefedit_gamepad_user2_type">Gamepad #2 Type</string>
    <string name="prefedit_launch_inspect_ds">Inspect Driver Station</string>
    <string name="prefedit_launch_inspect_ds_summary">Creates a self-inspection report for the driver station</string>
    <string name="prefedit_launch_inspect_rc">Inspect Robot Controller</string>
    <string name="prefedit_launch_inspect_rc_summary">Creates a self-inspection report for the robot controller</string>
    <string name="prefedit_pair_rc">Pair with Robot Controller</string>
    <string name="prefedit_pair_rc_summary">Change the robot controller this driver station is paired with</string>
    <string name="prefedit_sound_on_off">Sound</string>
    <string name="prefedit_sound_on_off_summary">Turn app sounds on or off</string>
    <string name="softapWifiInfo">The password you set on the RobotController in SoftAP mode</string>
    <string name="summaryAdvancedRCSettings">Change advanced settings of the robot controller</string>
    <string name="titleAdvancedRCSettings">Advanced Settings</string>
    <string name="wifi_filter_switch">Filter wifi devices</string>
</resources>